Test/metatests/TestDoesNotVerify.dfy.testdafny.expect
Verifying...
Verification failed. Output:
TestDoesNotVerify.dfy(6,11): Error: assertion might not hold

Dafny program verifier finished with 0 verified, 1 error

Error:

